--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -18,9 +18,9 @@
         &copy; 2023  Developed By <span style="color: rgb(196, 182, 182);margin-left: 5px;"> Saurabh Dixit</span>
       </div>
       <div class="footer-social">
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
-        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/saurabhdixit93"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/Saurabhdixit93"><i class="fa fa-github"></i></a>
+        <a href="mailto:smartds2550@gmail.com"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
 </footer>
