--- a/views/About.ejs
+++ b/views/About.ejs
@@ -28,12 +28,16 @@
         </div>
       </div>
       <div class="column is-half">
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in metus vel velit viverra dapibus. Nam consequat auctor tortor, a bibendum magna rutrum a. Integer eu orci placerat, euismod sapien et, mollis elit. In nec lectus ipsum. Proin non mauris vel leo aliquet tristique. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ac neque non sapien volutpat varius. Fusce ac augue nec diam euismod finibus. Nunc vel ipsum id nulla facilisis mollis. Fusce vel fringilla velit. Nulla facilisi. Fusce eget est at libero posuere viverra. Nam semper rutrum augue eu rhoncus. </p>
-          <p>Mauris dictum scelerisque metus, sit amet faucibus mauris volutpat a.</p>
-          <p>Phasellus posuere ligula sed enim tristique fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam laoreet ex nec risus gravida, eu semper eros iaculis. Integer semper felis nulla, nec blandit mi efficitur eget. Duis nec congue arcu. Nullam eget nisl eu velit feugiat bibendum. Aenean sit amet velit id turpis consectetur consectetur. </p>
-          <p>Quisque a nibh non dui aliquam tristique in sed metus. Aenean porttitor mauris auctor erat bibendum varius. Nam vestibulum mauris a lorem malesuada, eu rhoncus nulla varius. Nunc lacinia, nunc vel tristique posuere, ex lectus aliquam tellus, nec varius enim odio in dui. Sed feugiat sagittis fringilla. Sed sagittis convallis arcu, eu dictum lacus dapibus sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec lacinia, nibh vitae pharetra feugiat, nibh arcu vehicula enim, vel congue sapien turpis at velit. </p>
-        </div>
+        <p class="subtitle">Learn about our mission and values</p>
+
+      <div class="content">
+        <p>
+          At Weather App, we believe that everyone should have access to accurate and up-to-date weather information, no matter where they are. Our mission is to provide a simple and user-friendly platform that makes it easy for people to stay informed about the weather conditions in their area. Whether you're planning a weekend trip or just need to know if you should bring an umbrella to work, we've got you covered.
+        </p>
+        <p>
+          Our team is made up of passionate developers and weather enthusiasts who are dedicated to providing the best possible experience for our users. We value transparency, reliability, and accessibility, and we're always looking for ways to improve our app and make it even more useful for our users.
+        </p>
+      </div>
       </div>
     </div>
 </div>
