--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
             <h2 class="subtitle"><%= weather.city %>, <%= weather.country %></h2>
             <div class="columns is-vcentered">
                 <div class="column is-one-third has-text-centered">
-                    <figure class="image is-128x128">
+                    <figure class="image is-128x128" style="text-align: center; >
                         <img src="https://openweathermap.org/img/wn/<%= weather.icon %>.png">
                     </figure>
                 </div>
